<resources>
    <string name="app_name">Verra</string>

    <!-- Animation de la Page d'accueil-->
    <string name="lobby">VERRA</string>

    <!-- Page Inscription-->
    <string name="register_page">Enregistrement</string>
    <string name="register_add_page_name_input">Nom</string>
    <string name="register_add_page_number_input">Numéro de téléphone</string>
    <string name="register_add_page_email_input">E-mail</string>
    <string name="register_add_page_password_input">Mot de passe</string>
    <string name="register_page_signup">Vous avez déjà un compte?</string>
    <string name="register_page_link_click">Connectez-vous</string>
    <string name="error">Tout les champs sont obligatoires</string>
    <string name="great">Votre compte à été créer avec succès</string>

    <!-- Page Connexion-->
    <string name="link_page">Connecter</string>
    <string name="link_add_page_email_input">@string/register_add_page_email_input</string>
    <string name="link_add_page_password_input">@string/register_add_page_password_input</string>
    <string name="link_add_page_confirm_password_input">Confirmer le mot de passe</string>
    <string name="link_page_forget">Mot de passe oublié ?</string>
    <string name="link_page_signup">Besoin d\'aide ?</string>
    <string name="link_page_signup_click">Créer un compte</string>

    <!-- Page de payement-->
    <string name="payment_title">Choisissez on moyen de payement.</string>

    <string name="payment_visa_choose">Visa</string>
    <string name="payment_card_title">Carte bancaire</string>
    <string name="payment_holder_title">Titulaire de la carte</string>
    <string name="payment_holder_input">Ex: Dominic Joseph</string>
    <string name="payment_code_title">Code de la carte</string>
    <string name="payment_code_input">Ex: 55445521445412</string>
    <string name="payment_date_title">Date d\'éxpiration</string>
    <string name="payment_date_input">Ex: 12/24</string>
    <string name="payment_cvc_title">CVC</string>
    <string name="payment_cvc_input">Ex: 123</string>

    <string name="payment_mod_choose">Paypal</string>

    <string name="payment_total_title">TOTAL</string>
    <integer name="payment_price">0</integer>
    <string name="payment_price_pic">£</string>
    <string name="payment_button_command">Commandez</string>


    <!--Page d'accueil-->
    <string name="home_page_search_input">Rechercher..</string>

    <string name="home_page_lobby">Accueil</string>
    <string name="home_page_browse">Parcourir</string>
    <string name="home_page_man">Homme</string>
    <string name="home_page_women">Femme</string>
    <string name="home_page_child">Enfant</string>
    <string name="home_page_advertisement">Nouvelle collection</string>
    <string name="home_page_advertisement_description">Découvrir jusqu\'à -50% sur la première inscription.</string>
    <string name="home_page_advertisement_shop">Commandez</string>

    <string name="home_page_title">Article populaire</string>
    <string name="home_page_filter"><u>Tout</u></string>

    <!-- Article -->
    <string name="article_description"><u>Description de l\'article</u></string>
    <string name="article_name">Nom de l\'article</string>
    <string name="article_price">Le prix de l\'article</string>

    <!-- Home details -->
    <string-array name="add_article_spinner_input">
        <item>Homme : Veste</item>
        <item>Homme : Pantalon</item>
        <item>Homme : Chaussure</item>
    </string-array>

    <string name="article_jacket">Hauts</string>
    <string name="article_pants">Bas</string>
    <string name="article_shoe">Chaussures</string>

    <!-- Popup details -->
    <string name="popup_add">Ajouter au panier</string>
    <string name="add_article">Panier</string>

</resources>