<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/search_bg"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_search" />

            <EditText
                style="@style/input"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:hint="@string/home_page_search_input" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_unprofil"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_star"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:text="@string/home_page_man"
            android:textColor="@color/black"
            android:background="@drawable/home_button"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:text="@string/home_page_women"
            android:textColor="@color/black"
            android:background="@drawable/home_button"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/home_page_child"
            android:textColor="@color/black"
            android:background="@drawable/home_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/article_jacket"
            style="@style/s_payment_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/home_page_filter"
            style="@style/HomeFilterTextStyle"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container_jackets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/article_pants"
            style="@style/s_payment_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/home_page_filter"
            style="@style/HomeFilterTextStyle"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_container_pants"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/article_shoe"
            style="@style/s_payment_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/home_page_filter"
            style="@style/HomeFilterTextStyle"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container_shoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>