<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_pic">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/search_bg"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_search" />

            <EditText
                style="@style/input"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:hint="@string/home_page_search_input" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_unprofil"
            android:backgroundTintMode="add"/>

        <ImageButton
            android:id="@+id/btn_Logout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_logout"
            android:backgroundTintMode="add"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <Button
            android:id="@+id/btn_browse"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:text="@string/home_page_browse"
            android:textColor="@color/black"
            android:background="@drawable/home_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_gravity="end"
        android:layout_marginRight="20dp"
        android:background="@drawable/advertisement_border"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/AdvertisementText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/home_page_advertisement" />

            <TextView
                style="@style/AdvertisementTextDescription"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="8dp"
                android:text="@string/home_page_advertisement_description" />

            <Button
                style="@style/HomeCommandTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/commad_button"
                android:text="@string/home_page_advertisement_shop" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/stylepic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/home_page_title"
                style="@style/s_payment_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/home_page_filter"
                style="@style/HomeFilterTextStyle"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>