<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/upload_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_short_1"
            android:text="Charger l'image"
            android:padding="30dp"/>

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"/>
    </LinearLayout>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/article_name"
        android:padding="30dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/article_description"
        android:padding="30dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/price_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/article_price"
        android:padding="30dp"
        android:layout_marginTop="30dp"/>


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/black"
        android:text="Confirmer"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:layout_marginTop="30dp"/>

</LinearLayout>