<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic">

    <TextView
        android:id="@+id/textView2"
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/default_marginTop"
        android:text="@string/register_page"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="527dp"
        android:layout_marginTop="@dimen/default_marginTop"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/vanilla">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/ic_profil" />

            <EditText
                style="@style/DefaultTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/register_add_page_name_input" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/vanilla">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/ic_profil" />

            <EditText
                style="@style/DefaultTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/register_add_page_lastname_input" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/vanilla">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/ic_phone" />

            <EditText
                style="@style/DefaultTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/register_add_page_number_input" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/vanilla">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/ic_email" />

            <EditText
                style="@style/DefaultTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/register_add_page_email_input" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/vanilla">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/ic_lock" />

            <EditText
                style="@style/DefaultTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/register_add_page_password_input" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="@dimen/default_marginTop"
            android:background="@color/brown"
            android:text="@string/register_page_register_button"
            style="@style/ButtonTextStyle"/>

    </LinearLayout>



</LinearLayout>